--- a/views/index.mustache
+++ b/views/index.mustache
@@ -83,7 +83,7 @@ Log out
     
 <footer class="p-4 bg-violet-400 rounded-lg shadow md:px-6 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
-        <a href="/index" class="flex items-center mb-4 sm:mb-0">
+        <a href="/" class="flex items-center mb-4 sm:mb-0">
             <img src="./img/AGB_Wellness__4.png" class=" object-scale-down h-32 w-50" alt="AGB Wellness Logo"/>
         </a>
         <ul class="flex flex-wrap items-center mb-6 text-sm text-white sm:mb-0 ">
@@ -94,12 +94,12 @@ Log out
                 <a href="/login" class="mr-4 hover:underline md:mr-6">Log In</a>
             </li>
             <li>
-                <a href="/index" class="mr-4 hover:underline md:mr-6 ">Home</a>
+                <a href="/" class="mr-4 hover:underline md:mr-6 ">Home</a>
             </li>
     </div>
     <hr class="my-6 border-white sm:mx-auto dark:border-white lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2022 <a href="./index.html" class="hover:underline">AGB Wellness</a>. All Rights Reserved.
+        <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2022 <a href="/" class="hover:underline">AGB Wellness</a>. All Rights Reserved.
         </span>
         <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
             <a href="#" class="text-white hover:text-gray-900 dark:hover:text-white">
