--- a/views/about.mustache
+++ b/views/about.mustache
@@ -12,7 +12,7 @@
             <nav class="contents font-semibold text-base lg:text-lg">
                 <ul class="mx-auto flex items-center">
                     <li class="p-5 xl:p-24 active">
-                        <a href="/index">
+                        <a href="/">
                             <span>Home</span>
                         </a>
                     </li>
